--- a/src/main/resources/com/pwm/argos/main.fxml
+++ b/src/main/resources/com/pwm/argos/main.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -17,28 +18,29 @@
                   <Font size="64.0" />
                </font>
             </Text>
-            <Button fx:id="b1" mnemonicParsing="false" prefHeight="64.0" prefWidth="211.0" text="Button" />
-            <Button fx:id="b2" mnemonicParsing="false" prefHeight="59.0" prefWidth="224.0" text="Button" />
-            <Button fx:id="b3" mnemonicParsing="false" prefHeight="59.0" prefWidth="217.0" text="Button" />
-            <Button fx:id="b4" mnemonicParsing="false" prefHeight="59.0" prefWidth="224.0" text="Button" />
-            <Button fx:id="b5" mnemonicParsing="false" prefHeight="59.0" prefWidth="224.0" text="Button" />
-            <Button fx:id="b6" mnemonicParsing="false" prefHeight="59.0" prefWidth="224.0" text="Button" />
+            <Button id="button1" fx:id="b1" mnemonicParsing="false" prefHeight="64.0" prefWidth="211.0" style="-fx-background-color: #4d514e#4d514e #4d514e#4d514e;" text="Button" />
+            <Button id="button2" fx:id="b2" mnemonicParsing="false" prefHeight="59.0" prefWidth="224.0" style="-fx-background-color: #4d514e#4d514e;" text="Button" />
+            <Button fx:id="b3" mnemonicParsing="false" prefHeight="59.0" prefWidth="217.0" style="-fx-background-color: #4d514e#4d514e;" text="Button" />
+            <Button fx:id="b4" mnemonicParsing="false" prefHeight="59.0" prefWidth="224.0" style="-fx-background-color: #4d514e#4d514e;" text="Button" />
+            <Button fx:id="b5" mnemonicParsing="false" prefHeight="59.0" prefWidth="224.0" style="-fx-background-color: #4d514e#4d514e;" text="Button" />
+            <Button fx:id="b6" mnemonicParsing="false" prefHeight="59.0" prefWidth="224.0" style="-fx-background-color: #4d514e#4d514e;" text="Button" />
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text=" Argos by Kreuzer und Waldecker" wrappingWidth="198.21630859375" />
          </children>
       </VBox>
    </left>
    <center>
-      <Pane prefHeight="456.0" prefWidth="402.0" style="-fx-background-color: #303132;" BorderPane.alignment="CENTER">
+      <Pane prefHeight="456.0" prefWidth="402.0" style="-fx-background-color: #383838;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" layoutX="34.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adobde" wrappingWidth="110.21337890625">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Text>
             <Text fill="WHITE" layoutX="34.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User:" />
             <Text fill="WHITE" layoutX="34.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Passwort:" />
             <Label layoutX="33.0" layoutY="111.0" prefHeight="24.0" prefWidth="127.0" text="Label" textFill="#eeebeb" />
-            <Label layoutX="33.0" layoutY="175.0" prefHeight="24.0" prefWidth="127.0" text="Label" textFill="#eeebeb" />
+            <Label layoutX="34.0" layoutY="175.0" prefHeight="24.0" prefWidth="127.0" text="Label" textFill="#eeebeb" />
+            <Label layoutX="41.0" layoutY="21.0" text="Label" textFill="WHITE">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
+            <Line endX="100.0" layoutX="132.0" layoutY="57.0" startX="-100.0" stroke="#319e47" />
          </children>
       </Pane>
    </center>
